# tjm-project

./: README.md  automation.py  grounding.py  main.py  pyproject.toml
